--- a/openshift/pom.xml
+++ b/openshift/pom.xml
@@ -14,7 +14,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>openshift</finalName>
+        <finalName>ROOT</finalName>
     </build>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
