--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Robert Brem <robert.brem@adesso.ch>
 
 # copy application source code into container
 COPY . .
-
+RUN yum install maven -y
 RUN mvn clean install
 
 RUN cp target/*.war /opt/jboss/wildfly/standalone/deployments/
