--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,8 +4,12 @@ MAINTAINER Leonhard Gallagher <leonhard.gallagher@adesso.ch>
 
 # copy application source code into container
 COPY . .
+
 USER root
 RUN yum install maven -y
-RUN mvn clean package
 
-RUN cp target/*.war /opt/jboss/wildfly/standalone/deployments/
+USER jboss
+RUN mvn clean package &\
+  cp target/*.war /opt/jboss/wildfly/standalone/deployments/ &\
+  rm -rf src &\
+  rm -rf target
